# Store

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SECURITY_CHECKLIST.md  DEPLOYMENT_STEPS.md  GITHUB_NETLIFY_DEPLOYMENT.md  README.md  build.sh  debug-secure-storage.html  env.example  netlify.toml  package-lock.json  package.json  requirements.txt  start-dev.sh  test-auto-login.js  test-backend-approach.js  test-newsletter-api.js  test-nocodeapi-endpoint.js
backend/: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  setup.py  simple_api.py
backend/config/: logging.py
backend/middleware/: security.py
backend/scripts/: add_sample_files.py  check_products.py  check_r2_files.py  create_coupon_indexes.js  create_coupon_indexes.py  create_newsletter_coupon.py  create_test_user.py  fix_r2_file_paths.py  generate_product_slugs.py  insert_sample_product.py  keep_alive.py  test_auth.py  test_download_url.py  test_normalization.py  test_r2_connection.py  test_r2_functionality.py  update_audio_pages.py  update_product_audio.py  update_product_file_path.py  update_product_image.py  update_product_made_by.py  update_product_slug.py  update_product_validation.js
backend/services/: email_service.py
backend/services/templates/: guest_thank_you_email.html  guest_verification_email.html  newsletter_welcome_email.html  user_thank_you_email.html  user_verification_email.html  verification_email.html
backend/utils/: errors.py  slug.py
frontend/: README.md  netlify.toml  next.config.js  package-lock.json  (+1 more)
frontend-csr-backup/: netlify.toml
(+96 files in other folders)
