[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "atomic-rose-tools-backend"
version = "1.0.0"
description = "Backend API for Atomic Rose Tools Store"
authors = ["NivoDev <nivo@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
